add: more tweaks

--- a/html/index.html
+++ b/html/index.html
@@ -8,6 +8,16 @@
     <title>OrdiShop | Home</title>
 </head>
 <body>
-    
+    <header>
+        <nav>
+            <a href=""></a>
+            <a href=""></a>
+            <a href=""></a>
+            <a href=""></a>
+            <a href=""></a>
+            <a href=""></a>
+            <a href=""></a>
+        </nav>
+    </header>
 </body>
 </html>
