fix: fixed typo

--- a/html/index.html
+++ b/html/index.html
@@ -190,7 +190,7 @@
                         <li class="footerListElements">Presse</li>
                     </ul>
                 </li>
-                <li class="my-4">QUI SOMMES NOUSE?
+                <li class="my-4">QUI SOMMES NOUS?
                     <ul>
                         <li class="footerListElements">Qui sommes nous?</li>
                     </ul>
