add: More elements to home + template for others

--- a/html/index.html
+++ b/html/index.html
@@ -168,10 +168,10 @@
         </article>
     </section>
     <!-- Suppliers section -->
-    <section class="container-fluid row" id="supSec">
-        <article class="col m-3 p-5">
+    <section class="container-fluid" id="supSec">
+        <article class="m-3 p-5">
             <h2 class="mb-4 text-dark rounded">Nos fournisseurs</h2>
-            <div class="d-flex justify-content-between ">
+            <div class="d-flex justify-content-between flex-sm-column flex-lg-row">
                 <img src="../img/logo/asus-logo.png" alt="">
                 <img src="../img/logo/hp-logo.png" alt="">
                 <img src="../img/logo/sumsung-logo.png" alt="">
@@ -181,7 +181,57 @@
             </div>   
         </article>
     </section>
-    
+    <!-- Computers section -->
+    <section class="container-fluid" id="compSec">
+        <article class="m-3 p-5">
+            <h2 class="mb-4 text-light rounded">Nos ordinateurs</h2>
+            <div class="d-flex justify-content-between flex-column flex-lg-row">
+                <span class="card mb-sm-3">
+                    <div class="card-body">
+                        <h3 class="card-text text-center">Ordinateurs Bureau</h3>
+                        <a href="#" class="btn btn-info rounded-pill d-block mx-auto">Voir plus</a>
+                    </div>
+                    <img class="card-img-bottom" src="../img/computers/desktop.png" alt="desktop">
+                </span>
+                <span class="card mb-sm-3">
+                    <div class="card-body">
+                        <h3 class="card-text text-center">Ordinateurs Portable</h3>
+                        <a href="#" class="btn btn-info rounded-pill d-block mx-auto">Voir plus</a>
+                    </div>
+                    <img class="card-img-bottom" src="../img/computers/laptop.png" alt="desktop">
+                </span>
+                <span class="card mb-sm-3">
+                    <div class="card-body">
+                        <h3 class="card-text text-center">Ordinateurs Mini</h3>
+                        <a href="#" class="btn btn-info rounded-pill d-block mx-auto">Voir plus</a>
+                    </div>
+                    <img class="card-img-bottom" src="../img/computers/mini.png" alt="desktop">
+                </span>
+            </div>   
+        </article>
+    </section>
+    <!-- Crates section -->
+    <section class="container-fluid" id="crateSec">
+        <article class="m-3 p-5">
+            <h2 class="mb-4 text-light rounded">Nos coffrets</h2>
+                <div class="d-flex justify-content-around flex-column flex-lg-row">
+                    <span class="card mb-sm-3">
+                        <div class="card-body">
+                            <h3 class="card-text text-center">Coffret Entreprise/Ecole</h3>
+                            <a href="#" class="btn rounded-pill d-block mx-auto">Voir plus</a>
+                        </div>
+                        <img class="card-img-bottom d-block mx-auto" src="../img/crates/crate-big.png">
+                    </span>
+                    <span class="card mb-sm-3">
+                        <div class="card-body">
+                            <h3 class="card-text text-center">Coffret particulier</h3>
+                            <a href="#" class="btn rounded-pill d-block mx-auto">Voir plus</a>
+                        </div>
+                        <img class="card-img-bottom d-block mx-auto" src="../img/crates/crate-small.png">
+                    </span>
+                </div>   
+        </article>
+    </section>
     <!-- Footer (quick links, language, login) -->
     <footer>
         <div id="footerTopSection" class="py-3">
