--- a/html/index.html
+++ b/html/index.html
@@ -23,7 +23,7 @@
         <div class="navbar navbar-expand-lg d-flex navbar-dark justify-content-between">
             <div>
                 <a class="navbar-brand mx-5" href="../html/index.html">
-                    <img class="" src="../img/os-logo.png" alt="Impossible d'afficher le logo">
+                    <img class="" src="../img/os-logo.webp" alt="Impossible d'afficher le logo">
                     <!-- <img class="d-sm-none" src="../img/os-sm-logo.png" alt="Impossible d'afficher le logo" width="100rem"> -->
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -172,12 +172,12 @@
         <article class="m-3 p-5">
             <h2 class="mb-4 text-dark rounded">Nos fournisseurs</h2>
             <div class="d-flex justify-content-between flex-sm-column flex-lg-row">
-                <img src="../img/logo/asus-logo.png" alt="">
-                <img src="../img/logo/hp-logo.png" alt="">
-                <img src="../img/logo/sumsung-logo.png" alt="">
-                <img src="../img/logo/msi-logo.png" alt="">
-                <img src="../img/logo/dell-logo.png" alt="">
-                <img src="../img/logo/lenovo-logo.png" alt=""> 
+                <img src="../img/logo/asus.webp" alt="">
+                <img src="../img/logo/hp.webp" alt="">
+                <img src="../img/logo/samsung.webp" alt="">
+                <img src="../img/logo/msi.webp" alt="">
+                <img src="../img/logo/dell.webp" alt="">
+                <img src="../img/logo/lenovo.webp" alt=""> 
             </div>   
         </article>
     </section>
@@ -191,21 +191,21 @@
                         <h3 class="card-text text-center">Ordinateurs Bureau</h3>
                         <a href="#" class="btn btn-info rounded-pill d-block mx-auto">Voir plus</a>
                     </div>
-                    <img class="card-img-bottom" src="../img/computers/desktop.png" alt="desktop">
+                    <img class="card-img-bottom" src="../img/computers/desktop.webp" alt="desktop">
                 </span>
                 <span class="card mb-sm-3">
                     <div class="card-body">
                         <h3 class="card-text text-center">Ordinateurs Portable</h3>
                         <a href="#" class="btn btn-info rounded-pill d-block mx-auto">Voir plus</a>
                     </div>
-                    <img class="card-img-bottom" src="../img/computers/laptop.png" alt="desktop">
+                    <img class="card-img-bottom" src="../img/computers/laptop.webp" alt="desktop">
                 </span>
                 <span class="card mb-sm-3">
                     <div class="card-body">
                         <h3 class="card-text text-center">Ordinateurs Mini</h3>
                         <a href="#" class="btn btn-info rounded-pill d-block mx-auto">Voir plus</a>
                     </div>
-                    <img class="card-img-bottom" src="../img/computers/mini.png" alt="desktop">
+                    <img class="card-img-bottom" src="../img/computers/mini.webp" alt="desktop">
                 </span>
             </div>   
         </article>
@@ -220,14 +220,14 @@
                             <h3 class="card-text text-center">Coffret Entreprise/Ecole</h3>
                             <a href="#" class="btn rounded-pill d-block mx-auto">Voir plus</a>
                         </div>
-                        <img class="card-img-bottom d-block mx-auto" src="../img/crates/crate-big.png">
+                        <img class="card-img-bottom d-block mx-auto" src="../img/crates/big.webp">
                     </span>
                     <span class="card mb-sm-3">
                         <div class="card-body">
                             <h3 class="card-text text-center">Coffret particulier</h3>
                             <a href="#" class="btn rounded-pill d-block mx-auto">Voir plus</a>
                         </div>
-                        <img class="card-img-bottom d-block mx-auto" src="../img/crates/crate-small.png">
+                        <img class="card-img-bottom d-block mx-auto" src="../img/crates/small.webp">
                     </span>
                 </div>   
         </article>
@@ -291,7 +291,7 @@
         <div id="footerBottomSection" class="p-3">
             <span class="d-flex justify-content-between align-items-center px-5">
                 <span>
-                    <img src="../img/os-logo.png" height="50rem" class="me-5">
+                    <img src="../img/os-logo.webp" height="50rem" class="me-5">
                     Copyright &copy; 2022 ORDISHOP    
                 </span>
                 <!-- Change language -->
