--- a/html/nos-ord.html
+++ b/html/nos-ord.html
@@ -13,16 +13,16 @@
     <script src="../js/bootstrap.bundle.min.js"></script>
     <!-- CDN -->
     <script src="https://kit.fontawesome.com/23ca7ab081.js" crossorigin="anonymous"></script>
-    <title>OrdiShop | Home</title>
+    <title>OrdiShop | Title</title>
 </head>
 <body>
-    <main>
+    <main class="d-flex flex-column min-vh-100">
     <!-- Header of the page (nav, search, login, language, cart) -->
     <header id="headerTop">
         <div class="navbar navbar-expand-lg d-flex navbar-dark justify-content-between">
             <div>
                 <a class="navbar-brand mx-5" href="../html/index.html">
-                    <img class="" src="../img/os-logo.png" alt="Impossible d'afficher le logo">
+                    <img class="" src="../img/os-logo.webp" alt="Impossible d'afficher le logo">
                     <!-- <img class="d-sm-none" src="../img/os-sm-logo.png" alt="Impossible d'afficher le logo" width="100rem"> -->
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -153,10 +153,8 @@
         </nav>
     </header>
 
-    <!-- content goes here -->
-
     <!-- Footer (quick links, language, login) -->
-    <footer>
+    <footer class="mt-auto">
         <div id="footerTopSection" class="py-3">
             <svg id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1920 178"><defs><style>.cls-1{fill:#0d1840;}</style></defs><path class="cls-1" d="M1920,515H0V337l932,46.6q28,1.39,56,0L1920,337Z" transform="translate(0 -337)"/></svg>
             <a href="#headerTop" class="fa-solid fa-circle-up p-2"> </a>
@@ -214,7 +212,7 @@
         <div id="footerBottomSection" class="p-3">
             <span class="d-flex justify-content-between align-items-center px-5">
                 <span>
-                    <img src="../img/os-logo.png" height="50rem" class="me-5">
+                    <img src="../img/os-logo.webp" height="50rem" class="me-5">
                     Copyright &copy; 2022 ORDISHOP    
                 </span>
                 <!-- Change language -->
