add: Nos coffrets + Nos fournisseurs

--- a/html/index.html
+++ b/html/index.html
@@ -218,14 +218,14 @@
                     <span class="card mb-sm-3">
                         <div class="card-body">
                             <h3 class="card-text text-center">Coffret Entreprise/Ecole</h3>
-                            <a href="#" class="btn rounded-pill d-block mx-auto">Voir plus</a>
+                            <a href="./nos-cof.html#bigCrate" class="btn rounded-pill d-block mx-auto">Voir plus</a>
                         </div>
                         <img class="card-img-bottom d-block mx-auto" src="../img/crates/big.webp">
                     </span>
                     <span class="card mb-sm-3">
                         <div class="card-body">
                             <h3 class="card-text text-center">Coffret particulier</h3>
-                            <a href="#" class="btn rounded-pill d-block mx-auto">Voir plus</a>
+                            <a href="./nos-cof.html#smCrate" class="btn rounded-pill d-block mx-auto">Voir plus</a>
                         </div>
                         <img class="card-img-bottom d-block mx-auto" src="../img/crates/small.webp">
                     </span>
