--- a/html/nos-cof.html
+++ b/html/nos-cof.html
@@ -7,6 +7,7 @@
     <link rel="shortcut icon" href="../img/favicon.ico" type="image/x-icon">
     <!-- Styles CSS -->
     <link rel="stylesheet" href="../css/main.css">
+    <link rel="stylesheet" href="../css/nos-fournis-cof.css">
     <link rel="stylesheet" href="../css/bootstrap.min.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.10.2/mdb.min.css" rel="stylesheet"/>
     <!-- JS Imports -->
@@ -152,6 +153,45 @@
             <li><a class="nav-link text-light rounded" href="../html/blog.html">Blog</a></li>
         </nav>
     </header>
+
+    <section class="p-5 m-3">
+        <h1 class="text-center text-dark m-3">Nos Coffrets</h1>
+        <hr>
+        <article class="p-5 m-3">
+            <h3>Coffret Entreprises/Ecoles</h3>
+            <img src="../img/crates/big.webp" alt="" id="bigCrate"><span></span>
+
+            <ul>
+                <li>Ordinateur bureau / Portable (Selon votre choi et 100% personalisable)</li>
+                <li>Accessoires pour chaque ordinateur</li>
+                <li>Livraison</li>
+                <li> <span class="text-danger">-20% </span> prix des accessoires et <span class="text-danger">-13% </span> prix ordinateurs si la quantite depasse 20</li>
+            </ul>
+        </article>
+        <hr>
+        <article class="p-5 m-3">
+            <img src="../img/crates/small.webp" id="smCrate">
+            <h3>Coffret Ordinateur bureau avec accessoires</h3>
+
+            <ul>
+                <li>Ordinateur bureau
+                    <ul>
+                        <li>Processeur intel core [i3, i5, i7, i9]</li>
+                        <li>RAM [8GB DDR4, 16GB DDR4, 32GB DDR4]</li>
+                        <li>SSD [128GB, 256GB, 512GB, 1TB]</li>
+                        <li>HDD [512GB, 1TB, 2TB]</li>
+                        <li>Carte graphique puissante [Nvidia GTX 10 serie, Nvidia GTX 16 serie, Nvidia RTX 20 serie, Nvidia RTX 30 serie]</li>
+                    </ul>
+                </li>
+                <li>Ecran FHD (1920 &times; 1080)</li>
+                <li>Souris haute precision</li>
+                <li>Clavier mecanique</li>
+                <li>Haut Parleurs HQ</li>
+            </ul>
+
+        </article>
+
+    </section>
 
     <!-- Footer (quick links, language, login) -->
     <footer class="mt-auto">
