--- a/html/qsn.html
+++ b/html/qsn.html
@@ -7,6 +7,7 @@
     <link rel="shortcut icon" href="../img/favicon.ico" type="image/x-icon">
     <!-- Styles CSS -->
     <link rel="stylesheet" href="../css/main.css">
+    <link rel="stylesheet" href="../css/qsn.css">
     <link rel="stylesheet" href="../css/bootstrap.min.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.10.2/mdb.min.css" rel="stylesheet"/>
     <!-- JS Imports -->
@@ -154,8 +155,13 @@
     </header>
 
     <section>
-        <article>
-            
+        <article class="p-5 m-3">
+            <h1 class="text-center text-dark">Qui Sommes Nous?</h1>
+            <hr>
+            <p  >
+                <span class="name">ORDISHOP</span> est une entreprise de vente des ordinateurs en ligne. <br>Ce site est la seule platforme de vente de l'entreprise, il propose une experience de qualite aux visiteurs du site. <br>
+                Ce site adresse les particuliers, ecoles, administraations ou meme des revendeurs.
+            </p>
         </article>
     </section>
 
