fix: fixed "Nos coffrets" links

--- a/html/index.html
+++ b/html/index.html
@@ -189,21 +189,21 @@
                 <span class="card mb-sm-3">
                     <div class="card-body">
                         <h3 class="card-text text-center">Ordinateurs Bureau</h3>
-                        <a href="#" class="btn btn-info rounded-pill d-block mx-auto">Voir plus</a>
+                        <a href="#" class="btn rounded-pill d-block mx-auto">Voir plus</a>
                     </div>
                     <img class="card-img-bottom" src="../img/computers/desktop.webp" alt="desktop">
                 </span>
                 <span class="card mb-sm-3">
                     <div class="card-body">
                         <h3 class="card-text text-center">Ordinateurs Portable</h3>
-                        <a href="#" class="btn btn-info rounded-pill d-block mx-auto">Voir plus</a>
+                        <a href="#" class="btn rounded-pill d-block mx-auto">Voir plus</a>
                     </div>
                     <img class="card-img-bottom" src="../img/computers/laptop.webp" alt="desktop">
                 </span>
                 <span class="card mb-sm-3">
                     <div class="card-body">
                         <h3 class="card-text text-center">Ordinateurs Mini</h3>
-                        <a href="#" class="btn btn-info rounded-pill d-block mx-auto">Voir plus</a>
+                        <a href="#" class="btn rounded-pill d-block mx-auto">Voir plus</a>
                     </div>
                     <img class="card-img-bottom" src="../img/computers/mini.webp" alt="desktop">
                 </span>
@@ -218,14 +218,14 @@
                     <span class="card mb-sm-3">
                         <div class="card-body">
                             <h3 class="card-text text-center">Coffret Entreprise/Ecole</h3>
-                            <a href="./nos-cof.html#bigCrate" class="btn rounded-pill d-block mx-auto">Voir plus</a>
+                            <a href="./nos-cof.html#anchorPointBigCrate" class="btn rounded-pill d-block mx-auto">Voir plus</a>
                         </div>
                         <img class="card-img-bottom d-block mx-auto" src="../img/crates/big.webp">
                     </span>
                     <span class="card mb-sm-3">
                         <div class="card-body">
                             <h3 class="card-text text-center">Coffret particulier</h3>
-                            <a href="./nos-cof.html#smCrate" class="btn rounded-pill d-block mx-auto">Voir plus</a>
+                            <a href="./nos-cof.html#anchorPointSmallCrate" class="btn rounded-pill d-block mx-auto">Voir plus</a>
                         </div>
                         <img class="card-img-bottom d-block mx-auto" src="../img/crates/small.webp">
                     </span>
