--- a/html/nos-cof.html
+++ b/html/nos-cof.html
@@ -155,12 +155,13 @@
     </header>
 
     <section class="p-5 m-3">
+        <span id="anchorPointBigCrate"></span>
         <h1 class="text-center text-dark m-3">Nos Coffrets</h1>
         <hr>
         <article class="p-5 m-3">
             <h3>Coffret Entreprises/Ecoles</h3>
             <img src="../img/crates/big.webp" alt="" id="bigCrate"><span></span>
-
+            
             <ul>
                 <li>Ordinateur bureau / Portable (Selon votre choi et 100% personalisable)</li>
                 <li>Accessoires pour chaque ordinateur</li>
@@ -169,6 +170,7 @@
             </ul>
         </article>
         <hr>
+        <span id="anchorPointSmallCrate"></span>
         <article class="p-5 m-3">
             <img src="../img/crates/small.webp" id="smCrate">
             <h3>Coffret Ordinateur bureau avec accessoires</h3>
