add: minor tweaks

--- a/html/nos-cof.html
+++ b/html/nos-cof.html
@@ -162,12 +162,13 @@
             <h3>Coffret Entreprises/Ecoles</h3>
             <img src="../img/crates/big.webp" alt="" id="bigCrate"><span></span>
             
-            <ul>
+            <ul class="mb-5 caracteristics">
                 <li>Ordinateur bureau / Portable (Selon votre choi et 100% personalisable)</li>
                 <li>Accessoires pour chaque ordinateur</li>
                 <li>Livraison</li>
                 <li> <span class="text-danger">-20% </span> prix des accessoires et <span class="text-danger">-13% </span> prix ordinateurs si la quantite depasse 20</li>
             </ul>
+            <span class="alert alert-danger">A partir de 80 000 DH</span>
         </article>
         <hr>
         <span id="anchorPointSmallCrate"></span>
@@ -175,7 +176,7 @@
             <img src="../img/crates/small.webp" id="smCrate">
             <h3>Coffret Ordinateur bureau avec accessoires</h3>
 
-            <ul>
+            <ul class="mb-5 caracteristics">
                 <li>Ordinateur bureau
                     <ul>
                         <li>Processeur intel core [i3, i5, i7, i9]</li>
@@ -190,6 +191,7 @@
                 <li>Clavier mecanique</li>
                 <li>Haut Parleurs HQ</li>
             </ul>
+            <span class="alert alert-danger">A partir de 5 000 DH</span>
 
         </article>
 
