fix: modal not showing partially fixed

--- a/html/nos-cof.html
+++ b/html/nos-cof.html
@@ -14,7 +14,7 @@
     <script src="../js/bootstrap.bundle.min.js"></script>
     <!-- CDN -->
     <script src="https://kit.fontawesome.com/23ca7ab081.js" crossorigin="anonymous"></script>
-    <title>OrdiShop | Title</title>
+    <title>OrdiShop | Nos Coffrets</title>
 </head>
 <body>
     <main class="d-flex flex-column min-vh-100">
@@ -64,7 +64,7 @@
                         </ul>
                      </div>
                     <!-- Login Modal -->
-                     <div class="modal fade" id="LoginModal" tabindex="-1" aria-labelledby="LoginModalLabel" aria-hidden="true">
+                     <div class="modal fade" id="LoginModal" tabindex="1" aria-labelledby="LoginModalLabel" aria-hidden="true">
                          <div class="modal-dialog modal-dialog-centered">
                          <div class="modal-content">
                              <div class="modal-header">
