--- a/html/nos-ord.html
+++ b/html/nos-ord.html
@@ -13,7 +13,7 @@
     <script src="../js/bootstrap.bundle.min.js"></script>
     <!-- CDN -->
     <script src="https://kit.fontawesome.com/23ca7ab081.js" crossorigin="anonymous"></script>
-    <title>OrdiShop | Title</title>
+    <title>OrdiShop | Nos Ordinateurs</title>
 </head>
 <body>
     <main class="d-flex flex-column min-vh-100">
