fix: fixed <main> bug

--- a/html/index.html
+++ b/html/index.html
@@ -17,8 +17,10 @@
     <script src="https://kit.fontawesome.com/23ca7ab081.js" crossorigin="anonymous"></script>
     <title>OrdiShop | Home</title>
 </head>
+
+<!-- TODO: change fontawsome CDN into css file -->
 <body>
-    <div id="main">
+    <div id="main" class="d-flex flex-column min-vh-100">
         <!-- Header of the page (nav, search, login, language, cart) -->
         <header id="headerTop">
             <div class="navbar navbar-expand-lg d-flex navbar-dark justify-content-between">
