--- a/html/qsn.html
+++ b/html/qsn.html
@@ -17,7 +17,7 @@
     <title>OrdiShop | Qui somme nous?</title>
 </head>
 <body>
-    <main class="d-flex flex-column min-vh-100">
+    <div id="main" class="d-flex flex-column min-vh-100">
     <!-- Header of the page (nav, search, login, language, cart) -->
     <header id="headerTop">
         <div class="navbar navbar-expand-lg d-flex navbar-dark justify-content-between">
@@ -238,6 +238,6 @@
             </span>
         </div>
     </footer>
-    </main>
+    </div>
 </body>
 </html>
