fix: more optimization

--- a/html/nos-cof.html
+++ b/html/nos-cof.html
@@ -16,8 +16,7 @@
     <script src="https://kit.fontawesome.com/23ca7ab081.js" crossorigin="anonymous"></script>
     <title>OrdiShop | Nos Coffrets</title>
 </head>
-<body>
-    <div id="main" class="d-flex flex-column min-vh-100">
+<body class="d-flex flex-column min-vh-100">
     <!-- Header of the page (nav, search, login, language, cart) -->
     <header id="headerTop">
         <div class="navbar navbar-expand-lg d-flex navbar-dark justify-content-between">
@@ -270,6 +269,5 @@
             </span>
         </div>
     </footer>
-</div>
 </body>
 </html>
