--- a/html/index.html
+++ b/html/index.html
@@ -19,8 +19,7 @@
 </head>
 
 <!-- TODO: change fontawsome CDN into css file -->
-<body>
-    <div id="main" class="d-flex flex-column min-vh-100">
+<body class="d-flex flex-column min-vh-100">
         <!-- Header of the page (nav, search, login, language, cart) -->
         <header id="headerTop">
             <div class="navbar navbar-expand-lg d-flex navbar-dark justify-content-between">
@@ -309,6 +308,5 @@
                 </span>
             </div>
         </footer>
-    </div>
 </body>
 </html>
