--- a/html/nos-ord.html
+++ b/html/nos-ord.html
@@ -15,8 +15,7 @@
     <script src="https://kit.fontawesome.com/23ca7ab081.js" crossorigin="anonymous"></script>
     <title>OrdiShop | Nos Ordinateurs</title>
 </head>
-<body>
-    <div id="main" class="d-flex flex-column min-vh-100">
+<body class="d-flex flex-column min-vh-100">
     <!-- Header of the page (nav, search, login, language, cart) -->
     <header id="headerTop">
         <div class="navbar navbar-expand-lg d-flex navbar-dark justify-content-between">
@@ -226,6 +225,5 @@
             </span>
         </div>
     </footer>
-    </div>
 </body>
 </html>
