fix: default page now is index.html

--- a/html/nos-cof.html
+++ b/html/nos-cof.html
@@ -155,7 +155,7 @@
         ) -->
 
         <nav class="navbar px-5 d-flex flex-lg-row flex-md-column flex-sm-column flex-column justify-content-center">
-            <li><a class="nav-link text-light rounded" href="../html/index.html">Home</a></li>
+            <li><a class="nav-link text-light rounded" href="../index.html">Home</a></li>
             <li><a class="nav-link text-light rounded" href="../html/nos-ord.html">Nos Ordinateurs</a></li>
             <li><a class="nav-link text-light rounded" href="../html/nos-cof.html">Nos Coffrets</a></li>
             <li><a class="nav-link text-light rounded" href="../html/nos-fournis.html">Nos Fournisseurs</a></li>
